--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,17 +6,12 @@
     <div>
       <h1><a href="">Pee's Blog</a></h1>
     </div>
-
+  {% for post in posts %}
     <div>
-      <p>published: 14.06.2014, 12:14</p>
-      <h2><a href="">My first Post</a></h2>
-      <p>Some text please.</p>
+        <p>published: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
     </div>
-
-    <div>
-      <p>published: 14.06.2014, 12:14</p>
-      <h2><a href="">My Second Post</a></h2>
-      <p>Some text for the second Post.</p>
-    </div>
+  {% endfor %}
   </body>
 </html>
